--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -13,7 +13,7 @@
             <div class="gallery-group__item">
                 <picture>   
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-719-2-min.jpg 1х" media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-719-2-min.jpg" media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-719-2-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
                 </picture>
@@ -22,7 +22,7 @@
             <div class="gallery-group__item">
                 <picture>
                     <!-- <source  srcset="" media="(max-width: 767px)"> --> 
-                    <source  srcset="./images/gallery/gallery-600-min.jpg 1х" media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-600-min.jpg" media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-600-min.jpg" width="600" alt="галерея" class="gallery-main-img1">
                 </picture>
@@ -31,7 +31,7 @@
             <div class="gallery-group__item">
                 <picture>
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-700-min.jpeg 1х" media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-700-min.jpeg" media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-700-min.jpeg" width="780" alt="галерея" class="gallery-main-img1">
                 </picture>
@@ -40,7 +40,7 @@
           <div class="gallery-group__item">
             <picture>
                 <!--<source  srcset="" media="(max-width: 767px)">--> 
-                <source  srcset="./images/gallery/gallery-719-1-min.jpg 1х" media="(max-width: 1199px)">
+                <source  srcset="./images/gallery/gallery-719-1-min.jpg" media="(max-width: 1199px)">
                <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                 <img src="./images/gallery/gallery-719-1-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
             </picture>
@@ -49,7 +49,7 @@
           <div class="gallery-group__item">
             <picture>
                 <!--<source  srcset="" media="(max-width: 767px)">--> 
-                <source  srcset="./images/gallery/1585472821_15-new.jpg 1х" media="(max-width: 1199px)">
+                <source  srcset="./images/gallery/1585472821_15-new.jpg" media="(max-width: 1199px)">
                <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                 <img src="./images/gallery/1585472821_15-new.jpg" width="502" alt="галерея" class="gallery-main-img1">
             </picture>
@@ -58,7 +58,7 @@
           <div class="gallery-group__item">
             <picture>
                 <!--<source  srcset="" media="(max-width: 767px)">--> 
-                <source  srcset="./images/gallery/gallery-719-3-min.jpg 1х" media="(max-width: 1199px)">
+                <source  srcset="./images/gallery/gallery-719-3-min.jpg" media="(max-width: 1199px)">
                <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                 <img src="./images/gallery/gallery-719-3-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
             </picture>
@@ -67,7 +67,7 @@
         <div class="gallery-group__item">
              <picture>
                  <!--<source  srcset="" media="(max-width: 767px)">--> 
-                 <source  srcset="./images/gallery/gallery-tab-700-(11)new.jpg 1х" media="(max-width: 1199px)">
+                 <source  srcset="./images/gallery/gallery-tab-700-(11)new.jpg" media="(max-width: 1199px)">
                 <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                  <img src="./images/gallery/gallery-tab-700-(11)new.jpg" width="700" alt="галерея" class="gallery-main-img1">
              </picture>
@@ -76,7 +76,7 @@
         <div class="gallery-group__item">
             <picture>
                 <!--<source  srcset="" media="(max-width: 767px)">--> 
-                <source  srcset="./images/gallery/gallery-719-5-min.jpg 1х" media="(max-width: 1199px)">
+                <source  srcset="./images/gallery/gallery-719-5-min.jpg" media="(max-width: 1199px)">
                <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                 <img src="./images/gallery/gallery-719-5-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
             </picture>
@@ -85,7 +85,7 @@
           <div class="gallery-group__item ">
               <picture>
                   <!--<source  srcset="" media="(max-width: 767px)">--> 
-                  <source  srcset="./images/gallery/gallery-719-6-min.jpg 1х"  media="(max-width: 1199px)">
+                  <source  srcset="./images/gallery/gallery-719-6-min.jpg"  media="(max-width: 1199px)">
                  <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                   <img src="./images/gallery/gallery-719-6-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
               </picture>
@@ -94,7 +94,7 @@
              <div class="gallery-group__item">
                 <picture>
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-tab-810-min.jpg 1х" media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-tab-810-min.jpg" media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-tab-810-min.jpg" width="810" alt="галерея" class="gallery-main-img1">
                 </picture>
@@ -103,7 +103,7 @@
              <div class="gallery-group__item">
                 <picture>
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-tab-640-(6)-new.jpg 1х" media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-tab-640-(6)-new.jpg" media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-tab-640-(6)-new.jpg" width="771" alt="галерея" class="gallery-main-img1">
                 </picture>
@@ -112,7 +112,7 @@
             <div class="gallery-group__item">
                 <picture>
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-tab-640-2-min.jpg 1х"  media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-tab-640-2-min.jpg"  media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-tab-640-2-min.jpg" width="463" alt="галерея" class="gallery-main-img1">
                 </picture>
@@ -120,7 +120,7 @@
             <div class="gallery-group__item">
                 <picture>
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-tab-800-min.jpg 1х" media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-tab-800-min.jpg" media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-tab-800-min.jpg" width="800" alt="галерея" class="gallery-main-img1">
                 </picture>
@@ -129,7 +129,7 @@
              <div class="gallery-group__item">
                 <picture>
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-tab-771-(11)-new.jpg 1х" media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-tab-771-(11)-new.jpg" media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-tab-771-(11)-new.jpg" width="771" alt="галерея" class="gallery-main-img1">
                 </picture>
@@ -138,7 +138,7 @@
             <div class="gallery-group__item">
                 <picture>
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-tab-463-min.jpg 1х"  media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-tab-463-min.jpg"  media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-tab-463-min.jpg" width="463" alt="галерея" class="gallery-main-img1">
                 </picture>
@@ -146,7 +146,7 @@
             <div class="gallery-group__item">
                 <picture>
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-tab-640-min.jpg 1х" media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-tab-640-min.jpg" media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-tab-640-min.jpg" width="640" alt="галерея" class="gallery-main-img1">
                 </picture>
@@ -155,7 +155,7 @@
             <div class="gallery-group__item">
                 <picture>
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-tab-493-min.jpg 1х"  media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-tab-493-min.jpg"  media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-tab-493-min.jpg" width="493" alt="галерея" class="gallery-main-img1">
                 </picture>
@@ -163,7 +163,7 @@
             <div class="gallery-group__item">
                 <picture>
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-719-4-min.jpg 1х" media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-719-4-min.jpg" media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-719-4-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
                 </picture>
@@ -172,7 +172,7 @@
              <div class="gallery-group__item">
                 <picture>
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-tab-771-(11)-new.jpg 1х" media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-tab-771-(11)-new.jpg" media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-tab-771-(11)-new.jpg" width="771" alt="галерея" class="gallery-main-img1">
                 </picture>
@@ -180,7 +180,7 @@
             <div class="gallery-group__item">
                 <picture>   
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-719-2-min.jpg 1х" media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-719-2-min.jpg" media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-719-2-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
                 </picture>
@@ -189,7 +189,7 @@
             <div class="gallery-group__item">
                 <picture>
                     <!-- <source  srcset="" media="(max-width: 767px)"> --> 
-                    <source  srcset="./images/gallery/gallery-600-min.jpg 1х" media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-600-min.jpg" media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-600-min.jpg" width="600" alt="галерея" class="gallery-main-img1">
                 </picture>
@@ -198,7 +198,7 @@
             <div class="gallery-group__item">
                 <picture>
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-tab-860.jpg 1х" media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-tab-860.jpg" media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-tab-860.jpg" width="860" alt="галерея" class="gallery-main-img1">
                 </picture>
@@ -207,7 +207,7 @@
           <div class="gallery-group__item">
             <picture>
                 <!--<source  srcset="" media="(max-width: 767px)">--> 
-                <source  srcset="./images/gallery/gallery-719-1-min.jpg 1х" media="(max-width: 1199px)">
+                <source  srcset="./images/gallery/gallery-719-1-min.jpg" media="(max-width: 1199px)">
                <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                 <img src="./images/gallery/gallery-719-1-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
             </picture>
