--- a/src/partials/main-modal.html
+++ b/src/partials/main-modal.html
@@ -33,7 +33,7 @@
                     <svg class="modal-form__icon modal-icon" width="18" height="18">
                         <use href="./images/sprite.svg#icon-location2"></use>
                     </svg><span class="form-label-name">Your address</span>
-                    <span class="modal-form__container-input"><input type="text" required mame="addres"
+                    <span class="modal-form__container-input"><input type="text" required name="addres"
                             class="modal-form__input"  minlength="3" placeholder=""></span>
                 </span>
             </Label>
