--- a/src/partials/modal-footer.html
+++ b/src/partials/modal-footer.html
@@ -23,8 +23,8 @@
         <input required class="modal-form-modak__input" type="text" name="email" placeholder="Email" required minlength="4">
     </label>
 
-    <label for="coments" class="modal-lable" required minlength="4">Coments 
-        <textarea id="coments" class="form-coments" name="coments" placeholder="Enter text"></textarea></label>
+    <label for="coments" class="modal-lable">Coments 
+        <textarea id="coments" class="form-coments" name="coments" placeholder="Enter text" required minlength="4"></textarea></label>
          <button class="franchise-btn footer-btn" type="button">Send latter</button>
 </form>
     </div>
