--- a/src/partials/modal-footer.html
+++ b/src/partials/modal-footer.html
@@ -1,7 +1,7 @@
 <div class="is-hidden modal " data-footermodal>
     <div class=" modal__view">
         <button class="modal__close" data-footermodal-close>
-            <svg class="modal_icon" width="30" height="30">
+            <svg class="modal__cloused--icon" width="30" height="30">
                 <use href="./images/sprite.svg#icon-close-black-18dp-2-1-1"></use>
             </svg>
         </button>
