--- a/src/partials/modal-location.html
+++ b/src/partials/modal-location.html
@@ -1,7 +1,7 @@
 <div data-location class="modal is-hidden">
     <div class="modal__view">
         <button data-location-close class="modal__close" type="button">
-            <svg class="modal_icon"><use href="./images/sprite.svg#icon-close-black-18dp-2-1-1">
+            <svg class="modal__cloused--icon"><use href="./images/sprite.svg#icon-close-black-18dp-2-1-1">
             </use></svg>
         </button>
         <p class="modal__paragraf">the central office of the company can be found here</p>
