--- a/src/partials/main-modal.html
+++ b/src/partials/main-modal.html
@@ -1,6 +1,6 @@
 <div class="modal is-hidden " data-mainmodal>
     <div class="modal__view">
-        <button type="button" class="modal__close" width="30" height="30" data-mainmodal-close>
+        <button type="button" class="modal__close" data-mainmodal-close>
             <svg
                 class="button-close__icon modal__cloused--icon" width="18" height="18">
                 <use href="./images/sprite.svg#icon-close-black-18dp-2-1-1"></use>
