--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -163,7 +163,7 @@
                 <img class="reviews__img" src="./images/reviews/anton-min.jpg" alt="photo">
                 <div class="container-comment">
                     <article class="comment">Разрабатывал секцию "Gallery" и основное
-                    модальное окно. В проекте использовал такие технологи: html, CSS, Animate CSS, сборщик NPM, node.js, с
+                    модальное окно. В проекте использовал такие технологи: html, CSS, Animate CSS, node.js, с
                     помощью таких утилит: VSCode, Git/GitHub, Figma.</article>
                     <div class="gradient">
                     </div>
