--- a/src/sass/_mobi-menu.scss
+++ b/src/sass/_mobi-menu.scss
@@ -7,7 +7,8 @@
   opacity: 0;
   visibility: visible;
   top: 0;
-
+  transition-property: transform, opacity, visibility;
+  //   transition-duration: 500ms;
   transform: translatex(100%);
   transition: transform 500ms var(--timing-function);
 
@@ -15,12 +16,15 @@
     opacity: 1;
     transform: translatex(0%);
     visibility: visible;
+    transition-property: transform, opacity, visibility;
+    transition-duration: 500ms;
   }
   &.is-hidden {
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
-
+    transition-property: opacity, visibility, overflow;
+    transition-duration: 500ms;
     overflow: hidden;
   }
   &.is-open .menu-button__icon-menu {
