--- a/src/partials/modal-footer.html
+++ b/src/partials/modal-footer.html
@@ -23,9 +23,9 @@
         <input required class="modal-form-modak__input" type="text" name="email" placeholder="Email" required minlength="4">
     </label>
 
-    <label for="coments" class="modal-lable">Coments 
+    <label for="coments" class="modal-lable">Comment 
         <textarea id="coments" class="form-coments" name="coments" placeholder="Enter text" required minlength="4"></textarea></label>
-         <button class="franchise-btn footer-btn" type="button">Send latter</button>
+         <button class="franchise-btn footer-btn" type="button">Send letter</button>
 </form>
     </div>
 </div>
